--- a/creators/cboydoesstuff.html
+++ b/creators/cboydoesstuff.html
@@ -91,9 +91,9 @@
 
                 <li class="card">
                     <a href="https://pandora.app.link/QRdf5B4OWVb" target="_blank">
-                        <img class="theme-icon" src="/icons/Pandora_Logo_Black.webp"
-                            data-light-icon="/icons/Pandora_Logo_Black.webp"
-                            data-dark-icon="/icons/Pandora_Logo_White.webp" alt="Pandora">
+                        <img class="theme-icon" src="/icons/pandora-b.webp"
+                            data-light-icon="/icons/pandora-b.webp"
+                            data-dark-icon="/icons/pandora-w.webp" alt="Pandora">
                         <span class="creator-name">Pandora</span>
                     </a>
                 </li>
