--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 stream on. You can chill with us, talk, game, or participate in group watch. It's all about having fun
                 and forgetting about the drama.</p>
             <br><br>
-            <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join</a></h3>
+            <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join the Discord</a></h3>
         </div>
     </div>
 
@@ -134,37 +134,28 @@
     </div>
 
 
-    <!-- <div class="mc-container">
-        <div class="minecraft-section">
-            <h1>TheTimeVortex Create Modpack</h1>
-            <br>
-            <h3>Launcher Installation</h3>
-            <ul>
-                <li><a href="https://modrinth.com/modpack/thetimevortex-create" target="_blank">Modrinth Download</a>
-                </li>
-                <li><a href="https://www.curseforge.com/minecraft/modpacks/the-time-vortex-create"
-                        target="_blank">CurseForge Download</a></li>
-            </ul>
-            <br>
-            <h3>Manual Installation</h3>
-            <ul>
-                <li><a href="https://cdn.thetimevortex.net/TheTimeVortex-Create-Modpack-Manual-2.0.1.7z"
-                        target="_blank">Manual Download</a></li>
-                <li><a href="https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.0/forge-1.20.1-47.4.0-installer.jar"
-                        target="_blank">Forge Installer</a></li>
-            </ul>
-            <br>
-            <h3>Important Information</h3>
-            <p>When updating, please backup your <strong>journeymap</strong> folder to save your wavepoints.</p>
-            <p>Lastly, FTB mods aren't on Modrinth due to copyright issues.</p>
-            <br>
-            <h3>TheTimeVortex Create Server</h3>
-            <p>IP: <code class="server-ip">mc.thetimevortex.net</code></p>
-            <p>Fallback: <code class="server-ip">TheTimeVortexCreate.exaroton.me</code></p>
-            <p><strong>Server Availability:</strong> Not 24/7; whitelisted players can wake the server. The server will
-                mainly be up when TheDoctorttv is live on Twitch and Youtube.</p>
-        </div>
-    </div> -->
+<div class="mc-container">
+    <div class="minecraft-section">
+        <h1>TheTimeVortex Bedrock Realm</h1>
+        <br>
+        <h3>Join the Realm</h3>
+        <p>
+            This Realm is a <strong>Bedrock modpack/addon experience</strong> — not just vanilla Minecraft!
+            <br><br>
+            <a class="invite" href="https://realms.gg/RAdcUY9U6UL_pCM" target="_blank">
+                Join The Realm
+            </a>
+        </p>
+        <br>
+        <h3>Important Information</h3>
+        <p>
+            Works on <strong>Bedrock Edition</strong> across Windows, Xbox, PlayStation, Switch, and Mobile.  
+        </p>
+        <p>
+            Make sure your game is updated to the latest version for the best experience.  
+        </p>
+    </div>
+</div>
 
 
     <global-footer></global-footer>
