Added Back Privacy Policy

--- a/index.html
+++ b/index.html
@@ -142,9 +142,7 @@
         <p>
             This Realm is a <strong>Bedrock modpack/addon experience</strong> — not just vanilla Minecraft!
             <br><br>
-            <a class="invite" href="https://realms.gg/RAdcUY9U6UL_pCM" target="_blank">
-                Join The Realm
-            </a>
+            <h3><a class="invite" href="https://realms.gg/RAdcUY9U6UL_pCM" target="_blank">Join the Realm</a></h3>
         </p>
         <br>
         <h3>Important Information</h3>
