--- a/creators/thedoctorttv.html
+++ b/creators/thedoctorttv.html
@@ -46,7 +46,8 @@
                 my YouTube, Twitch, Discord, and other social media. Basically, I'm a Time Lord turned Demon Lord, and
                 this is my 121,027th regeneration.
                 <br><br>
-                I'm a huge weeb, I've seen tons of anime, I'm always keeping up with new releases, and have read tons of manga and
+                I'm a huge weeb, I've seen tons of anime, I'm always keeping up with new releases, and have read tons of
+                manga and
                 light novels. Oh, and fun fact: I built this whole website myself, no Wix, Squarespace, or
                 anything like that. (No hate to those who use 'em, though.)
             </p>
@@ -63,7 +64,7 @@
             <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join</a></h3>
         </div>
     </div>
-
+    
     <div class="social-container">
         <div class="socials">
             <h1>TheDoctorTTV's Social Media</h1>
@@ -87,6 +88,13 @@
                     <a href="https://kick.com/thedoctorttv" target="_blank">
                         <img src="/icons/kick-logo.svg" alt="Kick">
                         <span class="creator-name">Kick</span>
+                    </a>
+                </li>
+
+                <li class="card">
+                    <a href="https://www.youtube.com/@TheDoctorTTV24-7" target="_blank">
+                        <img src="/icons/youtube.svg" alt="Youtube">
+                        <span class="creator-name">24/7 VODs</span>
                     </a>
                 </li>
 
