--- a/creators/cboydoesstuff.html
+++ b/creators/cboydoesstuff.html
@@ -52,7 +52,8 @@
             <h1>CBoy's Wannabe Club Discord!</h1>
             <p>Want To Be A Loser?!?! COME AND JOIN THE WANNABES!!!</p>
             <br><br>
-            <h3><a class="discordinvite" href="https://discord.gg/8aCHvWKDee" target="_blank">Join</a></h3>
+            <h3><a class="discordinvite"  target="_blank">Currently under construction.</a></h3>
+            <!-- href="https://discord.gg/8aCHvWKDee" -->
         </div>
     </div>
 
@@ -61,12 +62,12 @@
             <h1>CBoyDoesStuff's Social Media</h1>
             <br><br>
             <ul class="social-page-icons">
-                <li class="card">
+                <!-- <li class="card">
                     <a href="https://youtube.com/@CBoyDoesStuff" target="_blank">
                         <img src="/icons/youtube.svg" alt="Youtube">
                         <span class="creator-name">Youtube</span>
                     </a>
-                </li>
+                </li> -->
 
                 <li class="card">
                     <a href="https://www.twitch.tv/cboydoesstuff" target="_blank">
@@ -82,12 +83,12 @@
                     </a>
                 </li>
 
-                <li class="card">
+                <!-- <li class="card">
                     <a href="https://discord.gg/8aCHvWKDee" target="_blank">
                         <img src="/icons/Discord.svg" alt="Discord Server">
                         <span class="creator-name">Discord</span>
                     </a>
-                </li>
+                </li> -->
 
                 <li class="card">
                     <a href="https://pandora.app.link/QRdf5B4OWVb" target="_blank">
