--- a/creators/thedoctorttv.html
+++ b/creators/thedoctorttv.html
@@ -14,8 +14,10 @@
     <meta property="og:description" content="A group of creators making entertainment." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
-    <script src="/header-footer.js"></script>
-    <script type="text/javascript" src="/darkmode.js" defer></script>
+    <script src="/js/header-footer.js"></script>
+    <script type="text/javascript" src="/js/darkmode.js" defer></script>
+    <script src="/js/app.js"></script>
+    <script src="/public/auth.js"></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
@@ -64,7 +66,7 @@
             <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join</a></h3>
         </div>
     </div>
-    
+
     <div class="social-container">
         <div class="socials">
             <h1>TheDoctorTTV's Social Media</h1>
