--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -14,8 +14,10 @@
     <meta property="og:description" content="A group of creators making entertainment." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
-    <script src="/header-footer.js"></script>
-    <script type="text/javascript" src="/darkmode.js" defer></script>
+    <script src="/js/header-footer.js"></script>
+    <script type="text/javascript" src="/js/darkmode.js" defer></script>
+    <script src="/js/app.js"></script>
+    <script src="/public/auth.js"></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
@@ -56,7 +58,7 @@
                 <p>TheTimeVortex does not collect or store any personal or technical information about visitors.
                     Any data collection is handled solely by the third-party services that support the
                     site, as described in the Third-Party Services section.</p>
-                    <br>
+                <br>
                 <h2>Local Storage</h2>
                 <p>TheTimeVortex does not use cookies. Instead, we use your browser’s <strong>localStorage</strong> to
                     save simple
