--- a/creators/azzy123.html
+++ b/creators/azzy123.html
@@ -14,8 +14,11 @@
     <meta property="og:description" content="A group of creators making entertainment." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
-    <script src="/header-footer.js"></script>
-    <script type="text/javascript" src="/darkmode.js" defer></script>
+    <script src="/js/header-footer.js"></script>
+    <script type="text/javascript" src="/js/darkmode.js" defer></script>
+    <script src="/js/app.js"></script>
+    <script src="/public/auth.js"></script>
+    <script src="/public/auth.js"></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
@@ -44,13 +47,13 @@
             <p class="about-me">
                 I am <Strong>Azzy123</Strong> a VRChat Roleplayer and 3D Modeler, and Streamer.
                 <br>
-                <ul>
-                    <li>Co-Owner of The Crimson Flame (Friend Group)</li>
-                    <li>Head DM for The Vix Inn</li>
-                    <li>I Actively Roleplay: The Vix Inn, Red Diamonds, & Your Cuppa RP</li>
-                    <li>Current developer for Playinthirdperson (Beat Saber Mod)</li>
-                    <li>Developer for The Sanctuary Mirage (VRChat World)</li>
-                </ul>
+            <ul>
+                <li>Co-Owner of The Crimson Flame (Friend Group)</li>
+                <li>Head DM for The Vix Inn</li>
+                <li>I Actively Roleplay: The Vix Inn, Red Diamonds, & Your Cuppa RP</li>
+                <li>Current developer for Playinthirdperson (Beat Saber Mod)</li>
+                <li>Developer for The Sanctuary Mirage (VRChat World)</li>
+            </ul>
             </p>
             <div class="pfp-container">
                 <img class="pfp" src="/PFPs/azzy123-pfp.webp" alt="Azzy123">
@@ -58,7 +61,8 @@
         </div>
         <div class="discord">
             <h1>Hazura the Kingdom of Magic Discord!</h1>
-            <p>Come join Hazura the Kingdom of Magic Discord Server, here you can talk, hangout and get notified when I go live. </p>
+            <p>Come join Hazura the Kingdom of Magic Discord Server, here you can talk, hangout and get notified when I
+                go live. </p>
             <br><br>
             <h3><a class="discordinvite" href="https://discord.gg/YCMxKy8" target="_blank">Join</a></h3>
         </div>
