--- a/creators/cboydoesstuff.html
+++ b/creators/cboydoesstuff.html
@@ -14,8 +14,10 @@
     <meta property="og:description" content="A group of creators making entertainment." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
-    <script src="/header-footer.js"></script>
-    <script type="text/javascript" src="/darkmode.js" defer></script>
+    <script src="/js/header-footer.js"></script>
+    <script type="text/javascript" src="/js/darkmode.js" defer></script>
+    <script src="/js/app.js"></script>
+    <script src="/public/auth.js"></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
@@ -42,7 +44,8 @@
         <div class="main">
             <h1>About Me</h1>
             <p class="about-me">
-                Hey, I'm <strong>CBoyDoesStuff</strong>! I love to play video games and make people laugh!!!! Enjoy the content and i hope to be the best streamer you've ever seen!
+                Hey, I'm <strong>CBoyDoesStuff</strong>! I love to play video games and make people laugh!!!! Enjoy the
+                content and i hope to be the best streamer you've ever seen!
             </p>
             <div class="pfp-container">
                 <img class="pfp" src="/PFPs/CBoyPFP.webp" alt="CBoyDoesStuff">
@@ -52,7 +55,7 @@
             <h1>CBoy's Wannabe Club Discord!</h1>
             <p>Want To Be A Loser?!?! COME AND JOIN THE WANNABES!!!</p>
             <br><br>
-            <h3><a class="discordinvite"  target="_blank">Currently under construction.</a></h3>
+            <h3><a class="discordinvite" target="_blank">Currently under construction.</a></h3>
             <!-- href="https://discord.gg/8aCHvWKDee" -->
         </div>
     </div>
@@ -92,8 +95,7 @@
 
                 <li class="card">
                     <a href="https://pandora.app.link/QRdf5B4OWVb" target="_blank">
-                        <img class="theme-icon" src="/icons/pandora-b.webp"
-                            data-light-icon="/icons/pandora-b.webp"
+                        <img class="theme-icon" src="/icons/pandora-b.webp" data-light-icon="/icons/pandora-b.webp"
                             data-dark-icon="/icons/pandora-w.webp" alt="Pandora">
                         <span class="creator-name">Pandora</span>
                     </a>
