--- a/creators/hashvt.html
+++ b/creators/hashvt.html
@@ -14,8 +14,10 @@
     <meta property="og:description" content="A group of creators making entertainment." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
-    <script src="/header-footer.js"></script>
-    <script type="text/javascript" src="/darkmode.js" defer></script>
+    <script src="/js/header-footer.js"></script>
+    <script type="text/javascript" src="/js/darkmode.js" defer></script>
+    <script src="/js/app.js"></script>
+    <script src="/public/auth.js"></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
@@ -42,7 +44,8 @@
         <div class="main">
             <h1>About Me</h1>
             <p class="about-me">
-                Hey, I’m <strong>HashVT</strong>! Gaming is my passion, collecting shinies is my side quest, and basement dwelling is my main stat. Let’s go~ ^-^ [EN/FR]
+                Hey, I’m <strong>HashVT</strong>! Gaming is my passion, collecting shinies is my side quest, and
+                basement dwelling is my main stat. Let’s go~ ^-^ [EN/FR]
             </p>
             <div class="pfp-container">
                 <img class="pfp" src="/PFPs/HashVT.webp" alt="TheDoctorTTV">
@@ -50,7 +53,8 @@
         </div>
         <div class="discord">
             <h1>Trending Squad Discord!</h1>
-            <p>Come Join the Trending Squad Discord Server, here you can talk, hangout and get notified when I go live. </p>
+            <p>Come Join the Trending Squad Discord Server, here you can talk, hangout and get notified when I go live.
+            </p>
             <br><br>
             <h3><a class="discordinvite" href="https://discord.com/invite/HgVsyVn" target="_blank">Join</a></h3>
         </div>
