--- a/creators/havocassassin.html
+++ b/creators/havocassassin.html
@@ -14,8 +14,10 @@
     <meta property="og:description" content="A group of creators making entertainment." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
-    <script src="/header-footer.js"></script>
-    <script type="text/javascript" src="/darkmode.js" defer></script>
+    <script src="/js/header-footer.js"></script>
+    <script type="text/javascript" src="/js/darkmode.js" defer></script>
+    <script src="/js/app.js"></script>
+    <script src="/public/auth.js"></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
@@ -42,7 +44,8 @@
         <div class="main">
             <h1>About Me</h1>
             <p class="about-me">
-                Chaos is my co-pilot, madness is my fuel, and destruction is my brand. I’m <strong>TheHavocAssassin</strong>,welcome to the mayhem.
+                Chaos is my co-pilot, madness is my fuel, and destruction is my brand. I’m
+                <strong>TheHavocAssassin</strong>,welcome to the mayhem.
             </p>
             <div class="pfp-container">
                 <img class="pfp" src="/PFPs/TheHavocAssassin.webp" alt="TheHavocAssassin">
@@ -81,7 +84,7 @@
                         <span class="creator-name">Discord</span>
                     </a>
                 </li>
-                                <li class="card">
+                <li class="card">
                     <a href="https://www.youtube.com/@HavocAssassinVods" target="_blank">
                         <img src="/icons/youtube.svg" alt="Youtube">
                         <span class="creator-name">VODs</span>
