--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <meta property="og:description" content="A group of creators making entertainment." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
-    <script src="header-footer.js"></script>
-    <script type="text/javascript" src="darkmode.js" defer></script>
+    <script src="/js/header-footer.js"></script>
+    <script type="text/javascript" src="/js/darkmode.js" defer></script>
+    <script src="/js/app.js"></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
