--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="/js/header-footer.js"></script>
     <script type="text/javascript" src="/js/darkmode.js" defer></script>
     <script src="/js/app.js"></script>
+    <script src="/public/auth.js" defer></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
