--- a/creators/cboydoesstuff.html
+++ b/creators/cboydoesstuff.html
@@ -116,12 +116,12 @@
             <h1>CBoyDoesStuff's Social Media</h1>
             <br><br>
             <ul class="social-page-icons">
-                <!-- <li class="card">
-                    <a href="https://youtube.com/@CBoyDoesStuff" target="_blank">
+                <li class="card">
+                    <a href="https://www.youtube.com/@cboydoesstuffreal" target="_blank">
                         <img src="/icons/youtube.svg" alt="Youtube">
                         <span class="creator-name">Youtube</span>
                     </a>
-                </li> -->
+                </li>
 
                 <li class="card">
                     <a href="https://www.twitch.tv/cboydoesstuff" target="_blank">
