--- a/creators/cboydoesstuff.html
+++ b/creators/cboydoesstuff.html
@@ -137,12 +137,12 @@
                     </a>
                 </li>
 
-                <!-- <li class="card">
-                    <a href="https://discord.gg/8aCHvWKDee" target="_blank">
+                <li class="card">
+                    <a href="https://discord.com/invite/sXgNEnM29p" target="_blank">
                         <img src="/icons/Discord.svg" alt="Discord Server">
                         <span class="creator-name">Discord</span>
                     </a>
-                </li> -->
+                </li>
 
                 <li class="card">
                     <a href="https://pandora.app.link/QRdf5B4OWVb" target="_blank">
