--- a/creators/cboydoesstuff.html
+++ b/creators/cboydoesstuff.html
@@ -106,8 +106,8 @@
             <h1>CBoy's Wannabe Club Discord!</h1>
             <p>Want To Be A Loser?!?! COME AND JOIN THE WANNABES!!!</p>
             <br><br>
-            <h3><a class="discordinvite" target="_blank">Currently under construction.</a></h3>
-            <!-- href="https://discord.gg/8aCHvWKDee" -->
+            <h3><a class="discordinvite" href="https://discord.com/invite/sXgNEnM29p" target="_blank">Join.</a></h3>
+            
         </div>
     </div>
 
