--- a/admin.html
+++ b/admin.html
@@ -64,7 +64,7 @@
         You must be logged in with your Discord account to access admin tools.
       </p>
       <br/>
-      <button class="invite" id="go-login">Login with Discord</button>
+      <button class="invite" id="go-login">Login</button>
     </div>
 
     <!-- Quick Actions -->
