--- a/profile.html
+++ b/profile.html
@@ -99,14 +99,7 @@
 
       <div class="profile-top">
         <img id="p-avatar" class="profile-avatar" alt="Your avatar" />
-        <div>
-          <div style="font-size:1.4rem; font-weight:600;" id="p-name"></div>
-          <div class="kv">Username: <span id="p-username"></span></div>
-          <div class="kv">Discord ID: <span id="p-id"></span>
-          </div>
-          <div class="kv">Email: <span id="p-email"></span></div>
-        </div>
-      </div>
+        <p>This is you profile, there isn't much to do here yet, check back later when there's more function.</p>
 
       <br />
 
