--- a/profile.html
+++ b/profile.html
@@ -151,7 +151,7 @@
           const adminBtn = document.getElementById('open-admin');
           if (adminBtn) {
             adminBtn.style.display = '';
-            adminBtn.addEventListener('click', () => (window.location.href = '/admin.html'));
+            adminBtn.addEventListener('click', () => (window.location.href = '/admin'));
           }
         }
 
